--- a/match_MU_to_DNR_WBID_7630.ipynb
+++ b/match_MU_to_DNR_WBID_7630.ipynb
@@ -24,6 +24,7 @@
         "import numpy as np\n",
         "!pip install rtree\n",
         "import rtree\n",
+        "import json\n",
         "\n",
         "from shapely import geometry, ops\n",
         "from shapely.geometry import Polygon\n",
@@ -186,7 +187,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import json\n",
+        "# Saving a geojson file\n",
         "\n",
         "# First converts the GeoDataFrame to a JSON string\n",
         "json_string = MU_gdf.to_json(na=\"drop\")\n",
