--- a/match_MU_to_DNR_WBID_7630.ipynb
+++ b/match_MU_to_DNR_WBID_7630.ipynb
@@ -12,11 +12,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 87,
       "id": "06960cfd-5ee7-4996-9b7e-dd6dc6d43e16",
       "metadata": {
         "id": "06960cfd-5ee7-4996-9b7e-dd6dc6d43e16",
-        "outputId": "0fea658e-5a02-460f-dda3-afa8d14e0943",
+        "outputId": "8047272a-11c0-4555-813a-ab92c19ec440",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -54,11 +54,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 88,
       "id": "2151aa0e-b960-48f4-9691-8efcb0b7b3a6",
       "metadata": {
         "id": "2151aa0e-b960-48f4-9691-8efcb0b7b3a6",
-        "outputId": "25b803ea-1fdd-481e-ed13-edf77f86701a",
+        "outputId": "c046c0f9-090a-4207-98d3-76a84f892061",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -958,7 +958,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 68
+          "execution_count": 88
         },
         {
           "output_type": "display_data",
@@ -1011,11 +1011,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 89,
       "id": "7273c8ba-233c-4ede-b6ec-a01a5ad688c4",
       "metadata": {
         "id": "7273c8ba-233c-4ede-b6ec-a01a5ad688c4",
-        "outputId": "304d09eb-d387-4829-d9bd-998ccfc1a5a1",
+        "outputId": "5b2e94cb-f43b-445a-b6dc-839fbcce8196",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 499
@@ -1033,7 +1033,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 69
+          "execution_count": 89
         },
         {
           "output_type": "display_data",
@@ -1064,13 +1064,13 @@
       ],
       "metadata": {
         "id": "ZeTQvQcBmG-Q",
-        "outputId": "4970d402-a807-46c6-bc82-5a763c2d1ca3",
+        "outputId": "d2dfd2b5-a118-4137-da8b-cbbf4574818b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "ZeTQvQcBmG-Q",
-      "execution_count": 70,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1083,7 +1083,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 70
+          "execution_count": 90
         }
       ]
     },
@@ -1099,11 +1099,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 95,
       "id": "f89a58aa-ff57-4b47-960d-cd8a00091291",
       "metadata": {
         "id": "f89a58aa-ff57-4b47-960d-cd8a00091291",
-        "outputId": "7e1eeaae-8bb7-4da2-d268-ab7aa02dd3c8",
+        "outputId": "f6d1a3e3-3a5a-4657-ef73-a5a36cf87610",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1113,61 +1113,61 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n",
-            "<ipython-input-75-1aa4581b8c03>:25: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "<ipython-input-95-7241eed4b791>:23: UserWarning: Geometry is in a geographic CRS. Results from 'area' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
             "\n",
             "  MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')]= gee_gdf.iloc[gee_gdf.area.idxmax()].geometry\n"
           ]
@@ -1187,12 +1187,10 @@
         "  elif MU_gdf.iloc[i]['WBID']!=0: # Gets geometry based on WBID\n",
         "    idx = MU_gdf.iloc[i]['WBID']\n",
         "    MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')] = MO_DNR.loc[idx].geometry\n",
-        "  #  if MO_DNR.loc[idx].geometry.geom_type == 'MultiPolygon':\n",
-        "  #    print(MO_DNR.loc[idx].geometry.geom_type);\n",
-        "  #    multipoly = MO_DNR.loc[idx].geometry\n",
-        "  #    MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')] = max(multipoly, key=lambda a: a.area)\n",
-        "  #  else:\n",
-        "  #    MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')] = MO_DNR.loc[idx].geometry\n",
+        "    if MO_DNR.loc[idx].geometry.geom_type == 'MultiPolygon':\n",
+        "      MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')] = max(MO_DNR.loc[idx].geometry.geoms, key=lambda a: a.area)\n",
+        "    else:\n",
+        "      MU_gdf.iloc[i, MU_gdf.columns.get_loc('geometry')] = MO_DNR.loc[idx].geometry\n",
         " # Looks for gee generated MU.geojson\n",
         "  else:\n",
         "    if os.path.exists(str(MU_gdf.iloc[i][\"MULakeNumber\"]) + '.geojson'):\n",
@@ -1220,14 +1218,14 @@
       ],
       "metadata": {
         "id": "YKKJ-cilZMk3",
-        "outputId": "a589526f-bf06-43fc-d62c-2f22fe9c1701",
+        "outputId": "a2190b89-9c8d-4a17-d0ee-4f7b71370e5e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
       "id": "YKKJ-cilZMk3",
-      "execution_count": 76,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1289,7 +1287,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7da3d3f8-c88b-4d92-9d77-778ccc8e0402\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-5888b437-4bbc-4575-aa5d-fa52d56cc076\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1507,7 +1505,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7da3d3f8-c88b-4d92-9d77-778ccc8e0402')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5888b437-4bbc-4575-aa5d-fa52d56cc076')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1559,12 +1557,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-7da3d3f8-c88b-4d92-9d77-778ccc8e0402 button.colab-df-convert');\n",
+              "        document.querySelector('#df-5888b437-4bbc-4575-aa5d-fa52d56cc076 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-7da3d3f8-c88b-4d92-9d77-778ccc8e0402');\n",
+              "        const element = document.querySelector('#df-5888b437-4bbc-4575-aa5d-fa52d56cc076');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1584,8 +1582,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-90d9198b-3b39-4043-94df-7693d82ff389\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-90d9198b-3b39-4043-94df-7693d82ff389')\"\n",
+              "<div id=\"df-6caebe9a-f44f-4ca8-b36d-331042e3d97c\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6caebe9a-f44f-4ca8-b36d-331042e3d97c')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1704,7 +1702,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-90d9198b-3b39-4043-94df-7693d82ff389 button');\n",
+              "        document.querySelector('#df-6caebe9a-f44f-4ca8-b36d-331042e3d97c button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1720,7 +1718,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 76
+          "execution_count": 96
         }
       ]
     },
@@ -1741,7 +1739,7 @@
         "id": "-zofE4hZdpHw"
       },
       "id": "-zofE4hZdpHw",
-      "execution_count": 78,
+      "execution_count": 98,
       "outputs": []
     },
     {
