--- a/send_geojson_file_to_GEE.ipynb
+++ b/send_geojson_file_to_GEE.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMA5tGQnO7AFhbsGnOlbrkS",
+      "authorship_tag": "ABX9TyND8QNiDuei6kThB0+YX7mn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -126,8 +126,20 @@
     {
       "cell_type": "code",
       "source": [
+        "## Load geojson files from github\n",
+        "DNR_watershed = gpd.read_file(\"https://raw.githubusercontent.com/gsilsbe/Missouri_Reservoirs/Data_Derived_products/geojson_files/DNR_watersheds.geojson\", driver='GeoJSON')"
+      ],
+      "metadata": {
+        "id": "hsDdeO6B3Gnf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# create a gee object with geemap\n",
-        "ee_object = geemap.geojson_to_ee(json_df)\n",
+        "ee_object = geemap.geojson_to_ee(DNR_watershed)\n",
         "\n",
         "# upload this object to earthengine\n",
         "asset = os.path.join(folder, asset_name)\n",
